# pulumi-local

./: .ci-mgmt.yaml  .gitmodules  .golangci.yml  .upgrade-config.yml  Makefile  README.md
.github/actions/download-bin/: action.yml
.github/actions/download-codegen/: action.yml
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/download-tfgen/: action.yml
.github/actions/upload-bin/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main.yml  master.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  verify-release.yml
examples/: examples_nodejs_test.go  go.mod  go.sum
patches/: 0000-fork.patch  0001-Add-shim-for-internal-access.patch
provider/: go.mod  go.sum  resources.go  shim.go
provider/cmd/pulumi-resource-local/: main.go  (+2 more)
scripts/: upstream.sh
sdk/: go.mod  go.sum
sdk/dotnet/: File.cs  GetFile.cs  GetSensitiveFile.cs  Provider.cs  Pulumi.Local.csproj  SensitiveFile.cs  Utilities.cs  pulumi-plugin.json
sdk/java/: README.md  build.gradle  settings.gradle
sdk/nodejs/: README.md  file.ts  getFile.ts  getSensitiveFile.ts  index.ts  package.json  provider.ts  sensitiveFile.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_local/: README.md  __init__.py  file.py  get_file.py  get_sensitive_file.py  provider.py  pulumi-plugin.json  sensitive_file.py
(+28 files in other folders)
